--- a/web/index.html
+++ b/web/index.html
@@ -97,5 +97,33 @@
       loadMainDartJs();
     }
   </script>
+
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.6/firebase-app.js";
+  import { getAnalytics, getFirestore } from "https://www.gstatic.com/firebasejs/9.6.6/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyBpdVXvwxZhemV3LFNS566Y_YXot-g0w1c",
+    authDomain: "to-the-g.firebaseapp.com",
+    projectId: "to-the-g",
+    storageBucket: "to-the-g.appspot.com",
+    messagingSenderId: "734713364710",
+    appId: "1:734713364710:web:0c84807d872ae7cb843b27",
+    measurementId: "G-H51YEND176"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+</script>
+
 </body>
 </html>
